--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=mini_cockpit_backend
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mini
 spring.datasource.username=root
 spring.datasource.password=Root1234
 
@@ -11,5 +11,8 @@ spring.mail.host=send.one.com
 spring.mail.port=587
 spring.mail.username=verification@matwn.dk
 spring.mail.password=abekat1234
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+logging.level.org.springframework.web.cors=DEBUG
+logging.level.org.springframework.security=DEBUG
+
