--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=mini_cockpit_backend
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mini
-spring.datasource.username=root
-spring.datasource.password=Root1234
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db
+spring.datasource.username=ssluser
+spring.datasource.password=password
+
 
 spring.mail.host=send.one.com
 spring.mail.port=587
