--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mini
 spring.datasource.username=ssluser
 spring.datasource.password=password
 
