--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.web.cors=DEBUG
 logging.level.org.springframework.security=DEBUG
 
+logging.file.path=/var/log/mini
