--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,15 +3,15 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mini
-spring.datasource.username=ssluser
-spring.datasource.password=password
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 
 spring.mail.host=send.one.com
 spring.mail.port=587
-spring.mail.username=verification@matwn.dk
-spring.mail.password=abekat1234
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.web.cors=DEBUG
