--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,18 @@
 spring.application.name=mini_cockpit_backend
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
-server.port=8084
+server.port=8443
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+server.ssl.key-store=${SSL_KEYSTORE_PATH}
+server.ssl.key-store-password=${SSL_KEYSTORE_PASS}
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=${SSL_KEY_ALIAS}
+server.ssl.key-password=${SSL_KEY_PASSWORD}
+server.ssl.enabled=true
 
 spring.mail.host=send.one.com
 spring.mail.port=587
