--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,4 +23,8 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.web.cors=DEBUG
 logging.level.org.springframework.security=DEBUG
 
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.server.port=8081
+
 logging.file.path=/var/log/mini
