--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,6 @@
 spring.application.name=mini_cockpit_backend
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
-server.port=8443
+server.port=${SERVER_PORT}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
@@ -14,8 +13,11 @@ server.ssl.key-alias=${SSL_KEY_ALIAS}
 server.ssl.key-password=${SSL_KEY_PASSWORD}
 server.ssl.enabled=true
 
-spring.mail.host=send.one.com
-spring.mail.port=587
+metabase.secret.key=${METABASE_SECRET_KEY}
+metabase.url=${METABASE_URL}
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=false
