--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,10 +20,8 @@ spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
-logging.level.org.springframework.web.cors=DEBUG
-logging.level.org.springframework.security=DEBUG
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
