fixed some issues with model - brand

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,14 @@ server.port=${SERVER_PORT}
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.hikari.data-source-properties.useSSL=true
+spring.datasource.hikari.data-source-properties.requireSSL=true
+spring.datasource.hikari.data-source-properties.verifyServerCertificate=true
+spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreUrl=${SSL_KEYSTORE_PATH}
+spring.datasource.hikari.data-source-properties.clientCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreUrl=${SSL_KEYSTORE_PATH}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
+
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
 server.ssl.key-store-password=${SSL_KEYSTORE_PASS}
