--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,8 +10,11 @@ spring.datasource.hikari.data-source-properties.requireSSL=true
 spring.datasource.hikari.data-source-properties.verifyServerCertificate=true
 spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreUrl=${SSL_KEYSTORE_PATH}
 spring.datasource.hikari.data-source-properties.clientCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
+spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreAlias=${MYSQL_CLIENT_CERT_ALIAS}
+
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreUrl=${SSL_KEYSTORE_PATH}
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreAlias=${MYSQL_CA_ALIAS}
 
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
