--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,6 +16,7 @@ spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreAlias=$
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreUrl=file:${SSL_KEYSTORE_PATH}
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreAlias=${MYSQL_CA_ALIAS}
+spring.datasource.hikari.data-source-properties.trustStoreType=JKS
 
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
