--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,23 +1,14 @@
 spring.application.name=mini_cockpit_backend
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=${SERVER_PORT}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.hikari.data-source-properties.useSSL=true
-spring.datasource.hikari.data-source-properties.requireSSL=true
-spring.datasource.hikari.data-source-properties.verifyServerCertificate=true
-spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreUrl=file:${SSL_KEYSTORE_PATH}
-spring.datasource.hikari.data-source-properties.clientCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
-spring.datasource.hikari.data-source-properties.clientCertificateKeyStoreAlias=${MYSQL_CLIENT_CERT_ALIAS}
 
-spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreUrl=file:${SSL_KEYSTORE_PATH}
-spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${SSL_KEYSTORE_PASS}
-spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreAlias=${MYSQL_CA_ALIAS}
-spring.datasource.hikari.data-source-properties.trustStoreType=JKS
-
+spring.datasource.hikari.data-source-properties.ssl-ca=${MYSQL_CA}
+spring.datasource.hikari.data-source-properties.ssl-cert=${MYSQL_CLIENT_CERT}
+spring.datasource.hikari.data-source-properties.ssl-key=${MYSQL_CLIENT_KEY}
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
 server.ssl.key-store-password=${SSL_KEYSTORE_PASS}
