--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,6 +10,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.hikari.data-source-properties.ssl-ca=${MYSQL_CA}
 spring.datasource.hikari.data-source-properties.ssl-cert=${MYSQL_CLIENT_CERT}
 spring.datasource.hikari.data-source-properties.ssl-key=${MYSQL_CLIENT_KEY}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStore=${MYSQL_CA}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${MYSQL_TRUSTSTORE_PASS}
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
 server.ssl.key-store-password=${SSL_KEYSTORE_PASS}
