--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,11 +7,11 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.hikari.data-source-properties.ssl-ca=${MYSQL_CA}
-spring.datasource.hikari.data-source-properties.ssl-cert=${MYSQL_CLIENT_CERT}
-spring.datasource.hikari.data-source-properties.ssl-key=${MYSQL_CLIENT_KEY}
-spring.datasource.hikari.data-source-properties.trustCertificateKeyStore=${MYSQL_CA}
+spring.datasource.hikari.data-source-properties.ssl-ca=${MYSQL_TRUSTSTORE}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStore=${MYSQL_TRUSTSTORE}
 spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${MYSQL_TRUSTSTORE_PASS}
+spring.datasource.hikari.data-source-properties.keyStore=${MYSQL_KEYSTORE}
+spring.datasource.hikari.data-source-properties.keyStorePassword=${MYSQL_KEYSTORE_PASS}
 
 server.ssl.key-store=${SSL_KEYSTORE_PATH}
 server.ssl.key-store-password=${SSL_KEYSTORE_PASS}
