--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=mini_cockpit_backend
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT_MINI}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
